--- a/package.json
+++ b/package.json
@@ -1,36 +1,24 @@
 {
-  "name": "sd-03-week3-html-css-project",
+  "name": "trybe-lessons-learned",
   "version": "1.0.0",
-  "description": "Você já usa o GitHub diariamente para desenvolver os exercícios, certo? Agora, para desenvolver os projetos, você deverá seguir as instruções a seguir. Fique atento a cada passo, e se tiver qualquer dúvida, nos envie por _Slack_! #vqv 🚀",
+  "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "cypress run",
-    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js, .jsx",
-    "lint:styles": "stylelint **/*.css --config .stylelintrc.json --ignore-disables --allow-empty-input",
-    "cypress:open": "cypress open"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tryber/sd-03-week3-html-css-project-tests.git"
-  },
+  "homepage": "https://username.github.io/trybe-lessons-learned",
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/tryber/sd-03-week3-html-css-project-tests/issues"
+  "scripts": {
+    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js, .jsx",
+    "lint:styles": "stylelint **/*.css --config .stylelintrc.json --ignore-disables --allow-empty-input",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
-  "homepage": "https://github.com/tryber/sd-03-week3-html-css-project-tests#readme",
   "devDependencies": {
-    "cypress": "^5.0.0",
-    "cypress-multi-reporters": "^1.2.3",
     "eslint": "^7.7.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.0",
     "minimist": ">=1.2.2",
-    "mocha": "^7.0.1",
-    "mochawesome": "^4.1.0",
-    "mochawesome-merge": "^4.0.0",
-    "mochawesome-report-generator": "^4.1.0",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0"
   }
